--- a/index.html
+++ b/index.html
@@ -808,6 +808,11 @@
                 display: inline-block;
                 font-size: var(--font_size_base);
             }
+
+            .understanding,
+            .shortcuts {
+                padding-top: var(--spacing_section);
+            }
         </style>
     </head>
     <body>
@@ -894,12 +899,7 @@
 
             <main>
                 <section aria-labelledby="results-title" class="relative">
-                    <!--<h2
-                        id="results-title"
-                        class="section_title uppercase center"
-                    >
-                        NOW, HERE
-                    </h2>-->
+                    <!--<h2  id="results-title" class="section_title uppercase center">NOW, HERE</h2>-->
                     <div class="section_card">
                         <output
                             class="calculated_date_info"
@@ -1090,7 +1090,10 @@
                     </form>
                 </section>
 
-                <section aria-labelledby="understanding-title" class="relative">
+                <section
+                    aria-labelledby="understanding-title"
+                    class="relative understanding"
+                >
                     <h2
                         id="understanding-title"
                         class="section_title uppercase center"
@@ -1183,7 +1186,10 @@
                     </aside>
                 </section>
 
-                <section aria-labelledby="shortcuts-title" class="relative">
+                <section
+                    aria-labelledby="shortcuts-title"
+                    class="relative shortcuts"
+                >
                     <h2
                         id="shortcuts-title"
                         class="section_title uppercase center"
@@ -1238,7 +1244,7 @@
 
                         <span class="validation_badge">
                             ✓ 八字 BA ZI is used as potentiality indicator, a
-                            Mnemonic Tools, a Thought Pump. Analphabet ready.
+                            Mnemonic Tools, a Thought Pump. Analphabets ready.
                             Pretty cool!
                         </span>
 
