--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- SEO and Sharing Meta Tags -->
         <meta
             name="description"
-            content="Calculate your BA ZI (Four Pillars of Destiny) with astronomical precision. Based on real solar positions and the 24 Solar Terms, not calendar approximations."
+            content="Calculate your BA ZI (八字 Four Pillars of Destiny) with astronomical precision. Based on real solar positions and the 24 Solar Terms, not calendar approximations."
         />
         <meta
             name="keywords"
@@ -273,7 +273,7 @@
             /* Forms */
             .input_grid {
                 display: grid;
-                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
                 gap: var(--spacing_base);
                 margin-bottom: var(--spacing_base);
             }
