v102 | fix 立春 year boundary + add versioning

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <title>
             Ba Zi 八字 - Astronomically-accurate Potentiality-pillars Calculator
-            | JUNGLESTAR
+            | JUNGLESTAR | v102
         </title>
         <style>
             :root {
