v104 | add version and date display in footer

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <title>
             Ba Zi 八字 - Astronomically-accurate Potentiality-pillars Calculator
-            | JUNGLESTAR | v103
+            | JUNGLESTAR | v104
         </title>
         <style>
             :root {
@@ -637,6 +637,16 @@
                 text-align: right;
                 border-top: var(--border_primary);
                 line-height: 2;
+            }
+
+            .version {
+                margin-block: var(--spacing_base);
+                padding: var(--spacing_base);
+                text-align: left;
+                border-top: var(--border_primary);
+                line-height: 2;
+                opacity: 0.6;
+                font-size: 0.85em;
             }
 
             fieldset {
@@ -1329,6 +1339,10 @@
                         </svg>
                     </aside>
                 </div>
+
+                <aside class="version" aria-label="Version information">
+                    v104 <br />2026-01-01
+                </aside>
 
                 <aside class="donation" aria-label="Donation information">
                     Feeling Thankful? <br />Tip this project! <br />
